storing connection string in secret manager (user-secrets)

--- a/GameStore.Api.csproj
+++ b/GameStore.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>c51d0d5a-05ee-4560-873b-5f67eb009e91</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
